Update to code and dependencies.
    - Update to the latest JDK 17 LTS.
    - Update to the latest dependencies.
    - Reformat all code.
    - Refactor the Distance calculation package.
    - Implements all sonarlint warnings.
    - Update the code to the latest JDK 17 features and APIs.